- Added Kotlin support - Libraries updates - Code cleanup