@@ -10,6 +10,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -733,23 +734,15 @@ public class FileURL implements Cloneable {
         sb.append("://");
 
         if (includeCredentials && credentials != null) {
-            try {
-                sb.append(URLEncoder.encode(credentials.getLogin(), "UTF-8"));
-            } catch (UnsupportedEncodingException e) {
-                // This can't happen in practice, UTF-8
-            }
+            sb.append(URLEncoder.encode(credentials.getLogin(), StandardCharsets.UTF_8));
 
             String password = credentials.getPassword();
-            if( !password.isEmpty()) {
+            if (!password.isEmpty()) {
                 sb.append(':');
                 if (maskPassword) {
                     sb.append(credentials.getMaskedPassword());
                 } else {
-                    try {
-                        sb.append(URLEncoder.encode(password, "UTF-8"));
-                    } catch (UnsupportedEncodingException e) {
-                        // This can't happen in practice, UTF-8 
-                    }
+                    sb.append(URLEncoder.encode(password, StandardCharsets.UTF_8));
                 }
             }
             sb.append('@');
